--- a/0x02-i18n/templates/0-index.html
+++ b/0x02-i18n/templates/0-index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
 	<title>Welcome to Holberton</title>
 </head>
 
 <body>
-	<h1>Hello World</h1>
+	<h1>Hello world</h1>
 </body>
 
 </html>
