--- a/0x02-i18n/templates/3-index.html
+++ b/0x02-i18n/templates/3-index.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-	<title>Welcome to Holberton</title>
+	<title>{{ _('home_title') }}</title>
 </head>
 
 <body>
-	<h1>Hello world</h1>
+	<h1>{{ _('home_header') }}</h1>
 </body>
 
 </html>
