--- a/0x02-i18n/templates/4-index.html
+++ b/0x02-i18n/templates/4-index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-	<title>{{ gettext('home_title') }}</title>
+	<meta charset="UTF-8">
+	<title>{{ _('home_title') }}</title>
 </head>
 
 <body>
-	<h1>{{ gettext('home_header') }}</h1>
+	<h1>{{ _('home_header') }}</h1>
 </body>
 
 </html>
