--- a/0x02-i18n/templates/4-index.html
+++ b/0x02-i18n/templates/4-index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-	<meta charset="UTF-8">
-	<title>{{ _('home_title') }}</title>
-</head>
-
-<body>
+<HTML lang="en">
+<HEAD>
+	<META charset="UTF-8">
+	<TITLE>{{ _('home_title') }}</TITLE>
+</HEAD>
+<BODY>
 	<h1>{{ _('home_header') }}</h1>
-</body>
-
-</html>
+</BODY>
+</HTML>
