--- a/0x02-i18n/templates/4-index.html
+++ b/0x02-i18n/templates/4-index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<HTML lang="en">
-<HEAD>
-	<META charset="UTF-8">
-	<TITLE>{{ _('home_title') }}</TITLE>
-</HEAD>
-<BODY>
-	<h1>{{ _('home_header') }}</h1>
-</BODY>
-</HTML>
+<html lang="en">
+
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>{{ gettext('home_title') }}</title>
+</head>
+
+<body>
+	<h1>{{ gettext('home_header') }}</h1>
+</body>
+
+</html>
